# erasmus-protomenta

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TOOLCHAIN.md  pyproject.toml
.github/: OPENCODE_SETUP.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-mission.md
.github/workflows/: ci.yml  (+1 more)
cognitive/: ERASMUS_SKILL.md  OPERATING_MODEL.md
config/: default.json
configs/: domain-bundle.ieee-sales.example.json  local-runtime.example.json
constitution/: AMENDMENT_PROTOCOL.md  AUTHORITY_BOUNDARIES.md  IMMUTABLE_CONTRACT.md  immutable-contract.md
contracts/: agent-task.schema.json  immune-agent.schema.json  mission.schema.json
docs/: ARCHITECTURE.md  DEVELOPMENT_TRACK.md  DUNE_PROVENANCE.md  agent-expansion-program.md  agent-orchestration.md  architecture.md  local-runtime-validation.md  mcp-local.md  runbook-windows.md  runtime-contract-evidence.md  worker-mcp-runbook.md
governance/: agent-control-policy.yaml
missions/: CONTRACT.md
prompts/: session-system-v1.txt
scripts/: bootstrap.ps1  test.ps1  validate_contract.ps1  validate_contract.py
tests/: test_authority.py  test_capability_graph.py  test_capability_runtime.py  test_continuity.py  test_contract_enforcer.py  test_contract_resolver.py  test_divergence.py  test_domain_bundle.py  test_governance.py  test_headless.py  test_immune.py  test_ledger.py  test_local_runtime.py  test_mcp_server.py  test_missions.py  test_skills.py  test_sleep.py  test_store.py  test_tool_registry.py  test_worker_mcp.py  test_worker_mcp_integration.py
tools/: publishers.json
(+53 files in other folders)
