[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erasmus-protomenta"
version = "0.2.0"
description = "Persistent dyadic cognitive kernel with deterministic-first capability routing and cognitive immunity"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
erasmus = "erasmus.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erasmus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
