[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erasmus-protomenta"
version = "0.2.0"
description = "Persistent dyadic cognitive kernel with deterministic-first capability routing and cognitive immunity"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.10.0,<5",
  "cryptography>=46.0.0,<47",
]

[project.scripts]
erasmus = "erasmus.cli.main:main"
erasmus-worker-mcp = "erasmus.worker_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erasmus"]

[tool.hatch.build.targets.wheel.force-include]
"contracts/mission.schema.json" = "erasmus/contracts/mission.schema.json"
"contracts/immune-agent.schema.json" = "erasmus/contracts/immune-agent.schema.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
